# spotify-client

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  partitions.csv
components/jsmn/: CMakeLists.txt
main/: CMakeLists.txt  buffer_callbacks.c  component.mk  display.c  handler_callbacks.c  main.c  parseobjects.c  selection_list.c  spiffs_wifi.c  spotifyclient.c  wifi.c
main/include/: buffer_callbacks.h  display.h  handler_callbacks.h  parseobjects.h  selection_list.h  spiffs_wifi.h  spotifyclient.h
